--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         async function loadData() {
             try {
-                const response = await fetch('./words_with_examples.json');
+                const response = await fetch('./words_with_examples2.json');
                 if (!response.ok) {
                     throw new Error('Failed to load data');
                 }
